Fixed spacing for various resolutions
index - reduced size of logo & text
projects - decreased margin sizes

--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,14 @@
 body {
 	font-family: 'Raleway', sans-serif;
 	color: white;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 nav {
 	margin-top: 100px;
-	font-size: 28pt;
+	font-size: 24pt;
 }
 
 nav a {
@@ -23,7 +26,7 @@ nav ul {
 	list-style: none;
 	text-align: right;
 	margin-right: 50px;
-	padding-top: 50px;
+	padding-top: 35px;
 }
 
 nav ul li {
@@ -33,7 +36,7 @@ nav ul li {
 
 #img-logo {
 	margin-left: 50px;
-	width: 500px;
+	width: 400px;
 	float: left;
 }
 
@@ -45,13 +48,14 @@ nav ul li {
 /* Start Page Specific CSS */
 
 h1 {
-	font-size: 125pt;
+	margin-top: 10%;
+	font-size: 80pt;
 	font-weight: 200;
 	clear: both;
 }
 
 h2 {
-	font-size: 72pt;
+	font-size: 60pt;
 	font-weight: 200;
 }
 
@@ -61,6 +65,11 @@ h2 {
 	z-index: -999;
 	left: 0px;
 	top: 0px;
-	width: 100%;
-	height: 100%;
+	width: 2560px;
+	height: 1440px;
+}
+
+html {
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
 }
