--- a/css/projects.css
+++ b/css/projects.css
@@ -129,7 +129,7 @@ h3 {
 
 /* moves all circles down and centered on the page */
 #div-circles {
-	margin-top: 100px;
+	margin-top: 70px;
 	margin-left: 70px;
 }
 
